@@ -1,5 +1,12 @@
 2018-02-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/blob.c (SeekBlob): Do not reallocate/extend read-only
+	blob in BlobStream mode.  Besides making an assumption about how
+	the blob memory was allocated, this reallocation feature provides
+	a memory DOS opportunity.  Resolves issue reported by Alex Gaynor
+	via email entitled "Security issue with memory management in
+	Magick++" to the graphicsmagick-security list on 31 Jan 2018.
+
 	* coders/jpeg.c (ReadIPTCProfile): Revert inadvertent wrong return
 	codes added by change on December 9, 2017.  Fixes SourceForge bug
 	542 "Improper call to JPEG library in state 201" since 1.3.28.
